<resources>
    <string name="app_name">Notebook</string>
    <string name="label">Label</string>
    <string name="enter_password">Enter password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="create">Create</string>
    <string name="create_label">Create Label</string>
    <string name="title">Title</string>
    <string name="choose_title">Choose title</string>
    <string name="contents">Contents</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="open">Open</string>
    <string name="cancel">Cancel</string>
    <string name="password_msg">This label is password protected.<br />Please enter the password to unlock.</string>
    <string name="new_note">New note</string>
    <string name="labels">Labels</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="updateLabel">Update Label</string>
</resources>