<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50sp">

        <TextView
            android:id="@+id/passwordprotectedMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:text="@string/password_msg"/>

        <EditText
            android:id="@+id/enterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/entry_margin"
            android:background="@drawable/selected_box"
            android:padding="@dimen/drawable_padding"
            android:drawableStart="@drawable/ic_lock"
            android:layout_below="@id/passwordprotectedMessage"
            android:hint="@string/enter_password"/>

        <Button
            android:id="@+id/openButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button1"
            android:layout_below="@id/enterPassword"
            android:layout_alignStart="@id/enterPassword"
            android:text="@string/open"/>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button1"
            android:layout_below="@id/enterPassword"
            android:layout_alignEnd="@id/enterPassword"
            android:text="@string/cancel"/>

    </RelativeLayout>


</RelativeLayout>