<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateLabel">

    <EditText
        android:id="@+id/labelEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/left_pad"
        android:layout_marginTop="190sp"
        android:ems="10"
        android:drawableStart="@drawable/ic_label"
        android:inputType="text"
        android:drawablePadding="@dimen/drawable_padding"
        android:background="@drawable/selected_box"
        android:padding="@dimen/drawable_padding"
        android:hint="@string/label" />

    <EditText
        android:id="@+id/passwordEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/left_pad"
        android:layout_marginTop="280sp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="@dimen/drawable_padding"
        android:background="@drawable/selected_box"
        android:padding="@dimen/drawable_padding"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/passwordReEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/left_pad"
        android:layout_marginTop="370sp"
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:drawablePadding="@dimen/drawable_padding"
        android:drawableStart="@drawable/ic_lock"
        android:background="@drawable/selected_box"
        android:padding="@dimen/drawable_padding"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/createUpdateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_700"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/left_pad"
        android:layout_marginTop="460sp"
        android:textAllCaps="false"
        android:background="@drawable/custom_button1"
        android:text="" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100sp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/deleteLabelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_700"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="200sp"
        android:layout_marginTop="460sp"
        android:textAllCaps="false"
        android:background="@drawable/custom_button1"
        android:visibility="invisible"
        android:text="@string/delete" />


</RelativeLayout>